--- a/Encryption.html
+++ b/Encryption.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
+    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,cpp,hackerrank,solutions,Encryption,An English text needs to be encrypted using the following encryption scheme.,First, the spaces are removed from the text. Let  be the length of this text.,Then, characters are written into a grid, whose rows and columns have the following constraints:,Example,After removing spaces, the string is  characters long.  is between  and , so it is written in the form of a grid with 7 rows and 8 columns.">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
-    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
+    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python,An English text needs to be encrypted using the following encryption scheme.,First, the spaces are removed from the text. Let  be the length of this text.,Then, characters are written into a grid, whose rows and columns have the following constraints:,Example,After removing space">
     <meta charset="utf-8">
     <title>Encryption</title>
     <link rel="stylesheet" href="common.css">
