--- a/Equalize the Array.html
+++ b/Equalize the Array.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
+    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,cpp,hackerrank,solutions,Equalize the Array,Given an array of integers, determine the minimum number of elements to delete to leave only elements of equal value.,Example, ,Delete the  elements  and  leaving . If both twos plus either the  or the  are deleted, it takes  deletions to leave either  or . The minimum number of deletions is .Function DescriptionComplete the equalizeArray function in the editor below.equalizeArray has the following parameter(s):int arr[n]: an array of integer">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
-    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
+    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python,Equalize the Array,Given an array of integers, determine the minimum number of elements to delete to leave only elements of equal value.,Example, ,Delete the  elements  and  leaving . If bot">
     <meta charset="utf-8">
     <title>Equalize the Array</title>
     <link rel="stylesheet" href="common.css">
