Update Extra Long Factorials.html

--- a/Extra Long Factorials.html
+++ b/Extra Long Factorials.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
+    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,cpp,hackerrank,solutions,Extra Long Factorials,The factorial of the integer , written , is defined as:,Calculate and print the factorial of a given integer.,For example, if , we calculate  and get .,Function Description,Complete the extraLongFactorials function in the editor below. It should print the result and return.,extraLongFactorials has the following parameter(s):,n: an integer">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
-    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
+    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python,The factorial of the integer , written , is defined as:,Calculate and print the factorial of a given integer.,For example, if , we calculate  and get .,Function Description,Complete the extraLongFactorials function in ">
     <meta charset="utf-8">
     <title>Extra Long Factorials</title>
     <link rel="stylesheet" href="common.css">
