--- a/Find Digits.html
+++ b/Find Digits.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
+    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,cpp,hackerrank,solutions,Find Digits,An integer  is a divisor of an integer  if the remainder of .,Given an integer, for each digit that makes up the integer determine whether it is a divisor. Count the number of divisors occurring within the integer.,Example, ,Check whether ,  and  are divisors of . All 3 numbers divide evenly into  so return .,,Check whether , , and  are divisors of . All 3 numbers divide evenly into  so return .,Check whether  and  are divisors of .  is, but  is not. Return .">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
-    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
+    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python,An integer  is a divisor of an integer  if the remainder of .,Given an integer, for each digit that makes up the integer determine whether it is a divisor. Count the number of divisors occurring within the integer.,Examp">
     <meta charset="utf-8">
     <title>Find Digits</title>
     <link rel="stylesheet" href="common.css">
