--- a/Flatland Space Stations.html
+++ b/Flatland Space Stations.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
+    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,cpp,hackerrank,solutions,Flatland Space Stations,Flatland is a country with a number of cities, some of which have space stations. Cities are numbered consecutively and each has a road of  length connecting it to the next city. It is not a circular route, so the first city doesn't connect with the last city., ,Determine the maximum distance from any city to its nearest space station., ,Example, ,There are  cities and city  has a space station. They occur consecutively along a route. City  is  unit away and city  is  units away. City  is  units from its nearest space station as one is located there. The maximum distance is .">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
-    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
+    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python,Flatland is a country with a number of cities, some of which have space stations. Cities are numbered consecutively and each has a road of  length connecting it to the next city. It is not a circular route, so the first city doesn't connect with the last city., ,Determine the maximum distance from any city to its nearest space station., ,Exa">
     <meta charset="utf-8">
     <title>Flatland Space Stations</title>
     <link rel="stylesheet" href="common.css">
