Update Forming a Magic Square.html

--- a/Forming a Magic Square.html
+++ b/Forming a Magic Square.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
+    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,cpp,hackerrank,solutions,Forming a Magic Square,We define a magic square to be an  matrix of distinct positive integers from  to  where the sum of any row, column, or diagonal of length  is always equal to the same number: the magic constant.,You will be given a  matrix  of integers in the inclusive range . We can convert any digit  to any other digit  in the range  at cost of . Given , convert it into a magic square at minimal cost. Print this cost on a new line.,,Note: The resulting magic square must contain distinct integers in the inclusive range ., ,Example,$s = [[5, 3, 4], [1, 5, 8], [6, 4, 2]],The matrix looks like this:">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
-    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
+    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python,Forming a Magic Square,We define a magic square to be an  matrix of distinct positive integers from  to  where the sum of any row, column, or diagonal of length  is always equal to the same number: the magic constant.,You will be given a  matrix  of integers in the inclusive range . We can convert any digit  to any ">
     <meta charset="utf-8">
     <title>Forming a Magic Square</title>
     <link rel="stylesheet" href="common.css">
