--- a/Grading Students.html
+++ b/Grading Students.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
+    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,cpp,hackerrank,solutions,Grading Students,HackerLand University has the following grading policy:,Every student receives a  in the inclusive range from  to .,Any  less than  is a failing grade.Sam is a professor at the university and likes to round each student's  according to these rules:,If the difference between the  and the next multiple of  is less than , round  up to the next multiple of ,,If the value of  is less than , no rounding occurs as the result will still be a failing grade.,Examples, round to  (85 - 84 is less than 3), do not round (result is less than 40), do not round (60 - 57 is 3 or higher),Given the initial value of  for each of Sam's  students, write code to automate the rounding process.">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
-    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
+    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python,HackerLand University has the following grading policy:,Every student receives a  in the inclusive range from  to .,Any  less than  is a failing grade.Sam is a professor at the university and likes to round each student's  according to these rules:,If the difference between the  and the next multiple">
     <meta charset="utf-8">
     <title>Grading Students</title>
     <link rel="stylesheet" href="common.css">
