--- a/Graduating.html
+++ b/Graduating.html
@@ -4,7 +4,7 @@
     <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,Graduating,In a university, your attendance determines whether you will be allowed to attend your graduation ceremony. You are not allowed to miss classes for two or more consecutive days. For example, if you miss a class today, then you must attend it tomorrow,Your graduation ceremony is on the last day of the academic year that is the Nth day.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
-    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
+    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python,,In a university, your attendance determines whether you will be allowed to attend your graduation ceremony. You are not allowed to miss classes for two or more consecutive days. For example, if you miss a class today, then you must attend it tomorrow,Your graduation ceremony is on the last day of the academic year">
     <meta charset="utf-8">
     <title>Graduating</title>
     <link rel="stylesheet" href="common.css">
