--- a/Happy Ladybugs.html
+++ b/Happy Ladybugs.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
+    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,cpp,hackerrank,solutions,Happy Ladybugs is a board game having the following properties:,The board is represented by a string, , of length . The  character of the string, , denotes the  cell of the board.If  is an underscore (i.e., _), it means the  cell of the board is empty.If  is an uppercase English alphabetic letter (ascii[A-Z]), it means the  cell contains a ladybug of color .,String  will not contain any other characters.,A ladybug is happy only when its left or right adjacent cell (i.e., ) is occupied by another ladybug having the same color.In a single move, you can move a ladybug from its current position to any empty cell.Given the values of  and  for  games of Happy Ladybugs, determine if it's possible to make all the ladybugs happy. For each game, return YES if all the ladybugs can be made happy through some number of moves. Otherwise, return NO.,Example">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
-    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
+    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python,Happy Ladybugs is a board game having the following properties:,The board is represented by a string, , of length . The  character of the string, , denotes the  cell of the board.If  is an underscore (i.e., _), it means the  cell of the board is empty.If  is an uppercase English alphabetic letter">
     <meta charset="utf-8">
     <title> </title>
     <link rel="stylesheet" href="common.css">
