Update Insertion Sort-Part 1.html

--- a/Insertion Sort-Part 1.html
+++ b/Insertion Sort-Part 1.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python">
+    <meta name="keywords" content="solutionsteam,solutions,hackerrank,hackerranksolutions,C++,Java,C,Python,cpp,hackerrank,solutions,Insertion Sort-Part 1,Sorting,One common task for computers is to sort data. For example, people might want to see all their files on a computer sorted by size. Since sorting is a simple problem with many different possible solutions, it is often used to introduce the study of algorithms.,Insertion Sort,These challenges will cover Insertion Sort, a simple and intuitive sorting algorithm. We will first start with a nearly sorted list.">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7673224820620063"crossorigin="anonymous"></script>
-    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python">
+    <meta name="description" content="Hackerrank Solutions in C, C++, Java, Python,Insertion Sort-Part 1,Sorting,One common task for computers is to sort data. For example, people might want to see all their files on a computer sorted by size. Since sorting is">
     <meta charset="utf-8">
     <title>Insertion Sort-Part 1</title>
     <link rel="stylesheet" href="common.css">
